--- a/JT_VoiceLib/Base.lproj/Main.storyboard
+++ b/JT_VoiceLib/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dmX-kr-qzN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dmX-kr-qzN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -49,7 +48,7 @@
         <scene sceneID="SVd-9x-9QK">
             <objects>
                 <navigationController id="yFm-8E-jqx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="发现" id="tWK-AC-WCW"/>
+                    <tabBarItem key="tabBarItem" title="发现" image="home" landscapeImage="home_select" id="tWK-AC-WCW"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DyT-L1-DEX">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -82,7 +81,7 @@
         <scene sceneID="zbj-UI-epm">
             <objects>
                 <navigationController id="EW9-2S-3jk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="音库" id="zjC-9Q-46R"/>
+                    <tabBarItem key="tabBarItem" title="音库" image="library" landscapeImage="library_select" id="zjC-9Q-46R"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gEy-uj-LtN">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -115,7 +114,7 @@
         <scene sceneID="CsJ-bR-umz">
             <objects>
                 <navigationController id="Wc3-Vd-yWf" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的" id="T6t-of-hMM"/>
+                    <tabBarItem key="tabBarItem" title="我的" image="user" landscapeImage="user_select" id="T6t-of-hMM"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ze2-nF-SRp">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -129,4 +128,12 @@
             <point key="canvasLocation" x="1609" y="-251"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="home" width="32" height="32"/>
+        <image name="home_select" width="32" height="32"/>
+        <image name="library" width="32" height="27"/>
+        <image name="library_select" width="32" height="27"/>
+        <image name="user" width="32" height="32"/>
+        <image name="user_select" width="32" height="32"/>
+    </resources>
 </document>
