--- a/JT_VoiceLib/Modules/Find/FindCardCell.xib
+++ b/JT_VoiceLib/Modules/Find/FindCardCell.xib
@@ -13,14 +13,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="gTV-IL-0wX" customClass="FindCardCell" customModule="JT_VoiceLib" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="gTV-IL-0wX" customClass="FindCardCell" customModule="JT_VoiceLib" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8x0-Fw-x1r">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8x0-Fw-x1r">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="2V2-c7-p5t">
@@ -72,6 +72,7 @@
                     </view>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="8x0-Fw-x1r" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="BDH-b1-Rv4"/>
                 <constraint firstItem="8x0-Fw-x1r" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="czL-su-FSo"/>
