--- a/JT_VoiceLib/Modules/Find/FindCardCell.xib
+++ b/JT_VoiceLib/Modules/Find/FindCardCell.xib
@@ -14,60 +14,37 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="gTV-IL-0wX" customClass="FindCardCell" customModule="JT_VoiceLib" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8x0-Fw-x1r">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="2V2-c7-p5t">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="2V2-c7-p5t" secondAttribute="height" multiplier="1:1" id="skK-f1-OWC"/>
                                 </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="FIndCardImage"/>
-                                </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="不要让自己为自己的青春后悔" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAo-i7-DFf">
-                                <rect key="frame" x="20" y="390" width="260" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="TE0-kL-dm4"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="FindCardSubTitle"/>
-                                </userDefinedRuntimeAttributes>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="趁我们还年轻" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bhx-5P-YcC">
-                                <rect key="frame" x="20" y="320" width="260" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="ggU-6H-Tga"/>
-                                </constraints>
+                                <rect key="frame" x="20" y="320" width="260" height="60"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="FindCardTitle"/>
-                                </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="2V2-c7-p5t" secondAttribute="trailing" id="20B-GB-v32"/>
-                            <constraint firstAttribute="trailing" secondItem="Bhx-5P-YcC" secondAttribute="trailing" constant="20" id="5HW-5s-bir"/>
                             <constraint firstItem="2V2-c7-p5t" firstAttribute="leading" secondItem="8x0-Fw-x1r" secondAttribute="leading" id="A6E-N2-odw"/>
                             <constraint firstItem="2V2-c7-p5t" firstAttribute="top" secondItem="8x0-Fw-x1r" secondAttribute="top" id="H12-gn-Jtz"/>
-                            <constraint firstItem="oAo-i7-DFf" firstAttribute="top" secondItem="Bhx-5P-YcC" secondAttribute="bottom" constant="30" id="O1E-2O-dW7"/>
-                            <constraint firstItem="Bhx-5P-YcC" firstAttribute="leading" secondItem="8x0-Fw-x1r" secondAttribute="leading" constant="20" id="dkE-MA-9r5"/>
-                            <constraint firstAttribute="bottom" secondItem="oAo-i7-DFf" secondAttribute="bottom" constant="30" id="emN-R7-kmI"/>
-                            <constraint firstItem="oAo-i7-DFf" firstAttribute="leading" secondItem="8x0-Fw-x1r" secondAttribute="leading" constant="20" id="udb-dJ-3T9"/>
-                            <constraint firstAttribute="trailing" secondItem="oAo-i7-DFf" secondAttribute="trailing" constant="20" id="zNL-WQ-ucQ"/>
+                            <constraint firstAttribute="trailing" secondItem="Bhx-5P-YcC" secondAttribute="trailing" constant="20" id="KU5-ym-Md4"/>
+                            <constraint firstAttribute="bottom" secondItem="Bhx-5P-YcC" secondAttribute="bottom" constant="20" id="RjS-eK-SsO"/>
+                            <constraint firstItem="Bhx-5P-YcC" firstAttribute="leading" secondItem="8x0-Fw-x1r" secondAttribute="leading" constant="20" id="S88-kx-3be"/>
+                            <constraint firstItem="Bhx-5P-YcC" firstAttribute="top" secondItem="2V2-c7-p5t" secondAttribute="bottom" constant="20" id="pii-Ij-U4M"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -81,9 +58,11 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="367" height="387"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="CardCell"/>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="containView" destination="8x0-Fw-x1r" id="0bI-HD-mv6"/>
-                <outlet property="descLbl" destination="oAo-i7-DFf" id="W9c-f4-lxi"/>
                 <outlet property="showImg" destination="2V2-c7-p5t" id="aff-ci-TGO"/>
                 <outlet property="titleLbl" destination="Bhx-5P-YcC" id="toF-OP-Gyb"/>
             </connections>
