--- a/JT_VoiceLib/Modules/Find/FindStoryBoard.storyboard
+++ b/JT_VoiceLib/Modules/Find/FindStoryBoard.storyboard
@@ -15,12 +15,12 @@
         <!--Find Next View Controller-->
         <scene sceneID="gOK-Kx-jbQ">
             <objects>
-                <viewController id="yXK-so-LDc" customClass="FindNextViewController" customModule="JT_VoiceLib" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FindNextViewController" id="yXK-so-LDc" customClass="FindNextViewController" customModule="JT_VoiceLib" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ioA-05-BgH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="99o-Ru-YQm">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="99o-Ru-YQm">
                                 <rect key="frame" x="0.0" y="20" width="375" height="375"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="99o-Ru-YQm" secondAttribute="height" multiplier="1:1" id="UYa-c4-70l"/>
@@ -32,38 +32,43 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="AlbumTitle"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="heroModifierString" value="fade translate(0, -150)"/>
+                                </userDefinedRuntimeAttributes>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8We-LE-IPH">
+                            <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8We-LE-IPH">
                                 <rect key="frame" x="0.0" y="295" width="375" height="372"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Yf3-dX-e1X">
-                                    <size key="itemSize" width="229" height="294"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="11" id="Yf3-dX-e1X">
+                                    <size key="itemSize" width="220" height="290"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="25" minY="25" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="a4T-QQ-U6I" customClass="FindNextCell" customModule="JT_VoiceLib" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="39" width="229" height="294"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FindNextCell" id="a4T-QQ-U6I" customClass="FindNextCell" customModule="JT_VoiceLib" customModuleProvider="target">
+                                        <rect key="frame" x="25" y="53.5" width="220" height="290"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="229" height="294"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="220" height="290"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Kq-pW-LFz">
-                                                    <rect key="frame" x="8" y="8" width="213" height="213"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="8Kq-pW-LFz">
+                                                    <rect key="frame" x="8" y="8" width="204" height="204"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="8Kq-pW-LFz" secondAttribute="height" multiplier="1:1" id="wxE-Dy-DCK"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="趁我们还爱你" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYZ-qC-1sL">
-                                                    <rect key="frame" x="10" y="241" width="209" height="33"/>
+                                                    <rect key="frame" x="10" y="232" width="200" height="38"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="GYZ-qC-1sL" firstAttribute="top" secondItem="8Kq-pW-LFz" secondAttribute="bottom" constant="20" id="2FN-QP-Ki8"/>
                                             <constraint firstItem="8Kq-pW-LFz" firstAttribute="top" secondItem="a4T-QQ-U6I" secondAttribute="topMargin" id="CvS-PH-WVB"/>
@@ -80,19 +85,38 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUF-M6-02h">
+                                <rect key="frame" x="315" y="40" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="6NL-Zp-8mW"/>
+                                    <constraint firstAttribute="height" constant="40" id="Jf2-vQ-3tv"/>
+                                </constraints>
+                                <state key="normal" title="关闭"/>
+                                <connections>
+                                    <action selector="closeClick:" destination="yXK-so-LDc" eventType="touchUpInside" id="8JZ-dl-iIB"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="8We-LE-IPH" firstAttribute="bottom" secondItem="MYB-JQ-lZx" secondAttribute="bottom" id="8GB-6N-wOO"/>
                             <constraint firstItem="99o-Ru-YQm" firstAttribute="leading" secondItem="MYB-JQ-lZx" secondAttribute="leading" id="FL9-PR-Mmq"/>
                             <constraint firstItem="8We-LE-IPH" firstAttribute="trailing" secondItem="MYB-JQ-lZx" secondAttribute="trailing" id="P8A-i5-Jj9"/>
                             <constraint firstItem="8We-LE-IPH" firstAttribute="leading" secondItem="MYB-JQ-lZx" secondAttribute="leading" id="au0-ob-eFJ"/>
                             <constraint firstItem="99o-Ru-YQm" firstAttribute="trailing" secondItem="MYB-JQ-lZx" secondAttribute="trailing" id="dpn-b8-rdq"/>
+                            <constraint firstItem="aUF-M6-02h" firstAttribute="trailing" secondItem="99o-Ru-YQm" secondAttribute="trailing" constant="-20" id="jp4-6F-ge1"/>
+                            <constraint firstItem="aUF-M6-02h" firstAttribute="top" secondItem="99o-Ru-YQm" secondAttribute="top" constant="20" id="mXA-Xm-XUl"/>
                             <constraint firstItem="8We-LE-IPH" firstAttribute="top" secondItem="99o-Ru-YQm" secondAttribute="bottom" constant="-100" id="nbd-8M-YpT"/>
                             <constraint firstItem="99o-Ru-YQm" firstAttribute="top" secondItem="MYB-JQ-lZx" secondAttribute="top" id="pMx-kB-ShK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MYB-JQ-lZx"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="aaaa"/>
+                        </userDefinedRuntimeAttributes>
                     </view>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="collectionView" destination="8We-LE-IPH" id="KmP-rd-vdF"/>
                         <outlet property="showImg" destination="99o-Ru-YQm" id="w5y-QS-B9E"/>
@@ -103,5 +127,70 @@
             </objects>
             <point key="canvasLocation" x="76" y="106.59670164917542"/>
         </scene>
+        <!--Album Detail View Controller-->
+        <scene sceneID="oYL-1h-dOk">
+            <objects>
+                <viewController storyboardIdentifier="AlbumDetailViewController" id="wCi-9s-NcO" customClass="AlbumDetailViewController" customModule="JT_VoiceLib" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kje-QD-XAt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="tyN-5E-ozy">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TNZ-Ia-D0n">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KpT-Z3-tCw">
+                                        <rect key="frame" x="20" y="20" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="c6o-bN-yJX"/>
+                                            <constraint firstAttribute="height" constant="40" id="gBw-Be-2MK"/>
+                                        </constraints>
+                                        <state key="normal" title="返回"/>
+                                        <connections>
+                                            <action selector="backClick:" destination="wCi-9s-NcO" eventType="touchUpInside" id="oYf-Lk-u8W"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="KpT-Z3-tCw" firstAttribute="leading" secondItem="TNZ-Ia-D0n" secondAttribute="leading" constant="20" id="RH6-Rt-hGR"/>
+                                    <constraint firstItem="KpT-Z3-tCw" firstAttribute="top" secondItem="TNZ-Ia-D0n" secondAttribute="top" constant="20" id="dLz-vo-Xvh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TNZ-Ia-D0n" firstAttribute="leading" secondItem="n08-dh-Ij2" secondAttribute="leading" id="Ia6-Qc-6ZE"/>
+                            <constraint firstItem="n08-dh-Ij2" firstAttribute="trailing" secondItem="TNZ-Ia-D0n" secondAttribute="trailing" id="QO5-wg-izW"/>
+                            <constraint firstItem="n08-dh-Ij2" firstAttribute="bottom" secondItem="TNZ-Ia-D0n" secondAttribute="bottom" id="cCk-79-dwS"/>
+                            <constraint firstItem="tyN-5E-ozy" firstAttribute="top" secondItem="n08-dh-Ij2" secondAttribute="top" id="dPH-tN-bOZ"/>
+                            <constraint firstItem="n08-dh-Ij2" firstAttribute="bottom" secondItem="tyN-5E-ozy" secondAttribute="bottom" id="g5n-jA-jgc"/>
+                            <constraint firstItem="TNZ-Ia-D0n" firstAttribute="top" secondItem="n08-dh-Ij2" secondAttribute="top" id="kJt-E0-Fva"/>
+                            <constraint firstItem="tyN-5E-ozy" firstAttribute="leading" secondItem="n08-dh-Ij2" secondAttribute="leading" id="rks-KB-4ek"/>
+                            <constraint firstItem="n08-dh-Ij2" firstAttribute="trailing" secondItem="tyN-5E-ozy" secondAttribute="trailing" id="two-dm-2a2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="n08-dh-Ij2"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="aaaa"/>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <navigationItem key="navigationItem" id="2Uy-cq-CgP"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="bgImageView" destination="tyN-5E-ozy" id="02a-l2-fWL"/>
+                        <outlet property="containView" destination="TNZ-Ia-D0n" id="qy3-Qx-zr2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wa5-2E-F2X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="852" y="107"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="default" width="320" height="320"/>
+    </resources>
 </document>
